--- a/app/views/job_postings/index.html.erb
+++ b/app/views/job_postings/index.html.erb
@@ -29,6 +29,16 @@
         <td><%= link_to 'Destroy', job_posting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
+    <% @scrapped_postings.each do |job_posting| %>
+      <tr>
+        <td><%= job_posting[:job] %></td>
+        <td><%= job_posting[:company] %></td>
+        <td><%= job_posting[:tags] %></td>
+        <td><%= job_posting[:description] %></td>
+        <td>Banana</td>
+        <td>100</td>
+      </tr>
+  <% end %>
   </tbody>
 </table>
 
