--- a/app/views/job_postings/index.html.erb
+++ b/app/views/job_postings/index.html.erb
@@ -34,7 +34,7 @@
         <td><%= job_posting[:job] %></td>
         <td><%= job_posting[:company] %></td>
         <td><%= job_posting[:tags] %></td>
-        <td><%= job_posting[:description] %></td>
+        <td><%=h job_posting[:description] %></td>
         <td>Banana</td>
         <td>100</td>
       </tr>
