--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,4 +7,10 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
+    %nav.deep-purple
+      .nav-wrapper
+        %a{href: '/', class:'brand-logo center'} Totes Remotes
+        %ul.right.hide-on-med-and-down
+          %li
+            %a{href: new_job_posting_path} Create New Job
     = yield
