--- a/app/assets/stylesheets/job_postings.scss
+++ b/app/assets/stylesheets/job_postings.scss
@@ -1,3 +1,26 @@
 // Place all the styles related to the JobPostings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.ellipsis {
+  display: block;
+  float: left;
+  width: 270px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.card.small.small_card_custom {
+  height: 330px;
+  span:after {
+    content:"";
+    display:table;
+    clear:both;
+  }
+  .material-icons.activator {
+    cursor: pointer;
+    margin-left: 0px;
+  }
+  .chip {
+    margin-top: 5px;
+  }
+}
