Small text change for card expand

--- a/app/views/job_postings/index.html.haml
+++ b/app/views/job_postings/index.html.haml
@@ -17,7 +17,7 @@
                 .chip= tag
             .card-reveal
               %span.card-title.activator.grey-text.text-darken-4
-                = "#{job_posting[:job]} #{job_posting[:company]}"
+                = "#{job_posting[:job]} @#{job_posting[:company]}"
               %p= job_posting[:description]
 %table.highlight
   %thead
