--- a/app/views/job_postings/index.html.haml
+++ b/app/views/job_postings/index.html.haml
@@ -5,16 +5,17 @@
     .row
       - slice.each do |job_posting|
         .col.s5.m4
-          .card.small.small_card_custom
+          .card.hoverable.card_custom
             .card-image.waves-effect.waves-block.waves-light
               = image_tag "code.jpg", {class: 'activator'}
             .card-content
               %span.card-title.grey-text.text-darken-4
                 .ellipsis= job_posting[:job]
                 %i.material-icons.activator.right more_vert
-              %p= job_posting[:company]
-              - job_posting[:tags].each do |tag|
-                .chip= tag
+              %p.truncate= job_posting[:company]
+              .tags
+                - job_posting[:tags].each do |tag|
+                  .chip.hide-on-med-and-down= tag
             .card-reveal
               %span.card-title.activator.grey-text.text-darken-4
                 = "#{job_posting[:job]} @#{job_posting[:company]}"
