--- a/app/views/job_postings/new.html.haml
+++ b/app/views/job_postings/new.html.haml
@@ -1,3 +1,4 @@
-%h1 New Job Posting
-= render 'form'
-= link_to 'Back', job_postings_path
+.container
+  %h1 New Job Posting
+  = render 'form'
+  = link_to 'Back', job_postings_path, {class: 'btn deep-purple'}
