--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
   %body
     %nav.deep-purple
       .nav-wrapper
-        %a{href: '/', class:'brand-logo center'} Totes Remotes
+        %a{href: '/job_postings', class:'brand-logo center'} Totes Remotes
         %ul.right.hide-on-med-and-down
           %li
             %a{href: new_job_posting_path} Create New Job
