--- a/app/views/job_postings/index.html.haml
+++ b/app/views/job_postings/index.html.haml
@@ -19,28 +19,5 @@
               %span.card-title.activator.grey-text.text-darken-4
                 = "#{job_posting[:job]} @#{job_posting[:company]}"
               %p= job_posting[:description]
-%table.highlight
-  %thead
-    %tr
-      %th Job
-      %th Company
-      %th Tags
-      %th Description
-      %th Location
-      %th Salary
-      %th{:colspan => "3"}
-  %tbody
-    - @job_postings.each do |job_posting|
-      %tr
-        %td= job_posting.job
-        %td= job_posting.company
-        %td= job_posting.tags
-        %td= job_posting.description
-        %td= job_posting.location
-        %td= job_posting.salary
-        %td= link_to 'Show', job_posting
-        %td= link_to 'Edit', edit_job_posting_path(job_posting)
-        %td= link_to 'Destroy', job_posting, method: :delete, data: { confirm: 'Are you sure?' }
-
-%br/
-= link_to 'New Job posting', new_job_posting_path
+  %br/
+  = link_to 'New Job posting', new_job_posting_path, {class: 'btn deep-purple'}
