Minor formatting and wording

--- a/app/views/job_postings/edit.html.haml
+++ b/app/views/job_postings/edit.html.haml
@@ -1,5 +1,5 @@
 .container
-  %h1 Editing Job Posting
+  %h3 Edit your job posting
   = render 'form'
   = link_to 'Show', @job_posting, {class: 'btn deep-purple'}
   |
