--- a/app/views/job_postings/new.html.haml
+++ b/app/views/job_postings/new.html.haml
@@ -1,4 +1,4 @@
 .container
-  %h1 New Job Posting
+  %h3 Create a job posting
   = render 'form'
   = link_to 'Back', job_postings_path, {class: 'btn deep-purple'}
